[ALLI-3678] make search history and saved searches tables responsive and readable. [ALLI-3645] Fix text underlap when record tab is filtered. [ALLI-3598] Make at least 4 tabs align in tablet view. Minor layout fixes

--- a/themes/finna/less/bootstrap/buttons.less
+++ b/themes/finna/less/bootstrap/buttons.less
@@ -128,7 +128,7 @@
     box-shadow: 0px 15px 20px -12px #000;
     z-index: 1;
     @media (max-width: @screen-sm-min) {
-        top: 41px;   
+        top: 37px;   
     }
 }
 .searchbox, .checkboxFilter {
